syntax = "proto3";

import "core.proto";

package pop.mpc.core.ot;

// Setup message sent by Base OT Sender
message BaseOtSenderSetup {
    // Senders public key
    bytes public_key = 1;
}

// Message sent by OT Sender containing encrypted values
message BaseOtSenderPayload {
    // Encrypted values corresponding to low choice bit
    repeated pop.mpc.core.Block low = 1;
    // Encrypted values corresponding to high choice bit
    repeated pop.mpc.core.Block high = 2;
}

// Setup message sent by Base OT Receiver
message BaseOtReceiverSetup {
    // Keys used to encrypt values by Sender
    repeated pop.mpc.core.RistrettoPoint keys = 1;
}

// Setup message sent by OT Receiver
message OtReceiverSetup {
    uint32 ncols = 1;
    repeated bytes table = 2;
}

message OtSenderPayload {
    // Encrypted values corresponding to low choice bit
    repeated pop.mpc.core.Block low = 1;
    // Encrypted values corresponding to high choice bit
    repeated pop.mpc.core.Block high = 2;
}